# home-network-guardian

./: .env.example  .gitignore  README.md  REMOTE_DEPLOYMENT.md  REMOTE_QUICK_REF.sh  REMOTE_SETUP_GUIDE.md  deploy_remote.sh  pyproject.toml  requirements.txt
src/home_network_guardian/: blocker.py  cli.py  config.py  credential_monitor.py  db.py  discovery.py  engine.py  models.py  notifier.py  traffic.py
tests/: test_credential_monitor.py  test_discovery.py  test_traffic.py
