[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-network-guardian"
version = "0.1.0"
description = "Home network security monitor: MAC inventory, malicious traffic detection, credential-change alerts."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Home Network Guardian" }]
dependencies = [
  "typer>=0.12.5",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3"]

[project.scripts]
hng = "home_network_guardian.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
